Fix ChatBubble text alignment

--- a/webapp/src/shared/components/ChatBubble/ChatBubble.css
+++ b/webapp/src/shared/components/ChatBubble/ChatBubble.css
@@ -6,6 +6,7 @@
 .chat-bubble-avatar {
   width: 1.5rem;
   height: 1.5rem;
+  flex-shrink: 0;
 }
 
 .chat-bubble-self {
@@ -33,6 +34,8 @@
 
 .chat-bubble-text > p {
   margin: 0;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 .chat-bubble-text-self {
